<resources>
    <string name="app_name">Putaway</string>
    <string name="Poppins_Regular">Poppins-Regular.ttf</string>
    <string name="Poppins_semibold">Poppins-SemiBold.ttf</string>
    <string name="Poppins_Medium">Poppins-Medium.ttf</string>
    <string name="Poppins_Bold">Poppins-Bold.ttf</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="display_p3_on_screen">Display P3 on Screen</string>
    <string name="lnguage_spn">Enable Spanish</string>
    <string name="logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="task">Task</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="enter_accept">Enter=Accept</string>
    <string name="skip">Skip</string>
    <string name="stage">Stage</string>
    <string name="slots">Slots</string>
    <string name="nextpck">NextPck</string>
    <string name="accept">Accept</string>

    <string name="btn_cancel">F12</string>
    <!--    <string name="next">Next</string>-->
    <string name="btn_exit">F3</string>
    <string name="btn_stage">F9</string>
    <string name="btn_enter_accept">Enter=Accept</string>
    <string name="btn_skip">F9</string>
    <string name="btn_nextpck">F11</string>
    <string name="manual">Manual</string>
    <string name="send_email">Share Logs</string>
    <string name="conncet_rfid_reader">Connect to RFiD Reader</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warehouse">Warehouse</string>
    <string name="licence">Licence#</string>
    <string name="scan_label">Scan Label</string>
    <string name="scanned">Scanned</string>
    <string name="quantity">Quantity</string>
    <string name="scan_slot">Scan Slot</string>
    <string name="wrong_scan">Wrong Scan</string>
    <string name="scan_function">Scan Function</string>
    <string name="scan">Scan</string>
    <string name="qty">Qty</string>
    <string name="enter_licence_or_label">Enter Licence or Label</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_license">Enter license</string>
    <string name="enter_label">Enter label</string>
    <string name="scan_zone">Scan zone</string>
    <string name="next_lic">Next lic#</string>
    <string name="next_lbl">Next lbl#</string>
    <string name="scan_lic">Scan lic#</string>
    <string name="from">From</string>
    <string name="aisle">Aisle</string>
    <string name="text_licence">Licence</string>
    <string name="text_label">Label</string>
    <string name="ovr_warn">Ovr warn</string>
    <string name="type">Type</string>

    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="scanning">Scanning Palet...</string>
    <string name="height_error">Height of Slot Mismatched</string>
    <string name="licence_not_allowed">License is not allowed to be placed in Slot</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="enter_w11slot1q">w11slot1q</string>
    <string name="enter_w11slot3s">w11slot3s</string>
    <string name="enter_w11slot2q">w11slot2q</string>
    <string name="enter_w11slot4s">w11slot4s</string>
    <string name="enter_w11slot1s">w11slot1s</string>
    <string name="enter_w11slot2s">w11slot2s</string>
    <string name="enter_w11slot3q">w11slot3q</string>
    <string name="enter_w11slot4q">w11slot4q</string>
    <string name="enter_w11slot2">w11slot2</string>
    <string name="enter_w11slot1">w11slot1</string>
    <string name="enter_w11slot4">w11slot4</string>
    <string name="enter_w11slot3">w11slot3</string>

    <string name="api_url">Enter Api url</string>
    <string name="enter_rfid_Ip">RFID Reader IP</string>
    <string name="enter_rfid_Port">RFID Reader Port</string>
    <string name="distance">Distance</string>

</resources>
