<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <FrameLayout
        android:id="@+id/putawaycontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dimen_70"
        android:animateLayoutChanges="true">

    </FrameLayout>

    <com.bfc.putaway.customviews.PutAwayCustomTextView
        android:id="@+id/tv_errorMsg"
        style="@style/regular_14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:singleLine="true"
        android:textColor="@color/colorRed"
        android:visibility="visible" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/color_bottom_bar"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/putawayll_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">


            <com.bfc.putaway.customviews.PutAwayCustomTextView
                android:id="@+id/tv_cancel"
                style="@style/regular_18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawablePadding="@dimen/dimen_5_dp"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/colorWhite" />


        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite" />


        <LinearLayout
            android:id="@+id/putawayll_skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.bfc.putaway.customviews.PutAwayCustomTextView
                android:id="@+id/tv_skip"
                style="@style/regular_18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:drawablePadding="@dimen/dimen_5_dp"
                android:text="@string/skip"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/colorWhite" />


        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite" />

        <LinearLayout
            android:id="@+id/putawayll_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            android:orientation="horizontal">

            <com.bfc.putaway.customviews.PutAwayCustomTextView
                android:id="@+id/tv_next"
                style="@style/regular_18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:drawablePadding="@dimen/dimen_5_dp"
                android:text="@string/next"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/colorWhite" />


        </LinearLayout>

    </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/putawayfab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:srcCompat="@drawable/abc_vector_test"
            android:visibility="visible"
            android:layout_marginLeft="@dimen/dimen_20_dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_20"
            android:rotation="180"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/putawayfab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginLeft="@dimen/dimen_15_dp"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_20"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_p_three"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/putawayfab_exp_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginLeft="@dimen/dimen_15_dp"
        android:layout_marginEnd="@dimen/dimen_20"
        android:layout_marginBottom="@dimen/dimen_20"
        android:visibility="visible"
        app:srcCompat="@drawable/ic_expend" />


        <!--android:drawableLeft="@drawable/ic_task_icon"-->

    <!--android:drawableStart="@drawable/ic_cancel_icon"-->




</RelativeLayout>
